--- a/irc-core/pom.xml
+++ b/irc-core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.headsupdev.irc</groupId>
     <artifactId>irc</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>irc-core</artifactId>
