--- a/pom.xml
+++ b/pom.xml
@@ -59,16 +59,16 @@
 
   <distributionManagement>
     <repository>
-      <id>headsup-open-release</id>
-      <url>dav:http://headsupdevelopment.org/repository/release/</url>
+      <id>headsupdev-release</id>
+      <url>dav:http://headsupdev.org/repository/release/</url>
     </repository>
     <snapshotRepository>
-      <id>headsup-open-snapshot</id>
-      <url>dav:http://headsupdevelopment.org/repository/snapshot/</url>
+      <id>headsupdev-snapshot</id>
+      <url>dav:http://headsupdev.org/repository/snapshot/</url>
     </snapshotRepository>
     <site>
-      <id>headsup-open-site</id>
-      <url>dav:http://headsupdevelopment.org/repository/site/irc/</url>
+      <id>headsupdev-site</id>
+      <url>dav:http://headsupdev.org/repository/site/irc/</url>
     </site>
   </distributionManagement>
 
