--- a/irc-api/pom.xml
+++ b/irc-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.headsupdev.irc</groupId>
     <artifactId>irc</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>irc-api</artifactId>
